@@ -1,0 +1,14 @@
+
+.*:     file format .*
+
+Contents of section \.text:
+ 100000b0 60000000 e9228018 60000000 38a28020  .*
+ 100000c0 e8c50000 60000000 3ba08028 7c62e82a  .*
+ 100000d0 60000000 39228033 60000000 38a28008  .*
+ 100000e0 e8c50000 60000000 3ba08010 7c62e82a  .*
+Contents of section \.got:
+ 100100f0 00000000 100180f0 00000000 10010124  .*
+ 10010100 00000000 10010125 00000000 10010120  .*
+ 10010110 00000000 10010121 00000000 10010122  .*
+Contents of section \.sdata:
+ 10010120 01020304 0506                        .*
